--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <link href="https://unpkg.com/sanitize.css" rel="text/plain" />
 
     <!--css-->
-    <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/responsiveness.css">
+    <link rel="stylesheet" href="../CEP-Finder/css/main.css">
+    <link rel="stylesheet" href="../CEP-Finder/css/style.css">
+    <link rel="stylesheet" href="../CEP-Finder/css/responsiveness.css">
 
     <title>Document</title>
 </head>
