--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
 
     <!-- javaScript -->
-    <script src=" ../js/script.js"></script>
+    <script src=" ../CEP-Finder/js/script.js"></script>
 </body>
 
 </html>
